# protected-point-to-point

./: README.md
Android-P3/: arm.config  crashlog  demo.conf  hello.ko  hello_world  hotplug  init  mount-ro.sh  mount-rw.sh  p3secondary.conf  p3secondary_froyo.ko  p3secondary_gb.ko  p3syssecondary  secondary.config  telnet.txt
Binaries/: INSTALL.md
Binaries/Android/: install.sh  p3run  p3secondary.ko  p3stop  p3syssecondary  prepare.sh
Binaries/CentOS/: p3primary.conf  p3primary.ko  p3secondary.ko  p3stop  p3sysprimary  p3syssecondary
Binaries/Redhat-PrimaryPlus/: install.sh  p3primary.ko  p3secondary.ko  p3sysprimary  p3sysprimaryplus  p3syssecondary
Binaries/Ubuntu/: install.sh  p3primary.ko  p3secondary.ko  p3sysprimary  p3syssecondary
doc/: dconfig
doc/html/: P3ADMIN_MSGS.html  P3ADMIN__MSGS.html  P3KM_MSGS.html  P3PRIPLUS_MSGS.html  P3PRIPLUS__MSGS.html  P3PRI_MSGS.html  P3PRI__MSGS.html  P3SEC_MSGS.html  P3SEC__MSGS.html  P3_MSGS.html  P3__MSGS.html  aes_8c.html  aes_8c_0773743fae8155fec8bf75c087531364_cgraph.map  aes_8c_0773743fae8155fec8bf75c087531364_cgraph.md5  aes_8c__incl.map  aes_8c__incl.md5  aes_8h-source.html  aes_8h.html  aes_8h_2c124b1a4c62fd3e448090d70e76c9eb_cgraph.map  aes_8h_2c124b1a4c62fd3e448090d70e76c9eb_cgraph.md5  aes_8h_2d6be417e64bdeddfc5c0c035fb6d176_cgraph.map  aes_8h_5c1fa1647ea06de25b72db0239129de6_cgraph.map  aes_8h_5c1fa1647ea06de25b72db0239129de6_cgraph.md5  aes_8h__dep__incl.md5  aes__ccm_8c.html  aes__ccm_8c_5bb534448c0496a9a8dbbe198e9bc838_cgraph.map  aes__ccm_8c_5bb534448c0496a9a8dbbe198e9bc838_cgraph.md5  aes__ccm_8c__incl.md5  aes__ccm_8h-source.html  aes__ccm_8h.html  aes__ccm_8h__dep__incl.md5  aes__ccm_8h_cb4de9292d32fdb6cb7b1999fb9bd3fb_cgraph.md5  aes__cmac_8c.html  aes__cmac_8c_170bfdb24012f911a0d6c8425b32df32_cgraph.md5  aes__cmac_8c_8efde07e2dbd395f8ecfbc5f322cc662_cgraph.map  aes__cmac_8c__incl.md5  aes__cmac_8c_c9d2201a67783906c9640c546b4423f1_cgraph.map  aes__cmac_8c_c9d2201a67783906c9640c546b4423f1_cgraph.md5  (+764 more)
product_docs/: DEMO_README.md  P3 Routing.doc  P3CheatSheet.txt  README.md  TechnicalHandout.ppt  VS_P3_FunctionSpecification.doc  VS_P3_SystemSpecification.doc  netcat.p3  netcat.trace  protect.php  test256k
src/: P3-Doxyfile
src/P3/: .cdtproject  .cproject  .project  .tm_project2.cache  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libtool  rebuild.sh
src/P3/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/P3/data/: primary.config  secondary.config
src/P3/doc/: VS_P3_Administration.doc  VS_P3_FunctionSpecification-PA.doc  VS_P3_FunctionSpecification.doc  VS_P3_SystemSpecification.doc  dconfig  porting2smart_phone.txt
src/P3/doc/VelociteSystemsP3_PA/: CHANGELOG.txt  InstallAndroid.txt  InstallP3.txt  P3ADMIN_MSGS.html  P3KM_MSGS.html  P3SYSTEM_MSGS.html
src/P3/doc/VelociteSystemsP3_PA/AndroidRooting/: README.txt
src/P3/doc/VelociteSystemsP3_PA/CentOS/: install.sh  p3primary.conf  p3syssecondary
src/P3/doc/VelociteSystemsP3_PA/Redhat/: install.sh  p3primary.ko  p3run  p3secondary.conf  p3secondary.ko  p3sysprimary
src/P3/doc/VelociteSystemsP3_PA/Ubuntu/: install.sh  p3primary.ko  p3secondary.conf  p3secondary.ko  p3sysprimary  p3syssecondary
src/P3/ksrc/: Makefile  p3kbase.h  p3kconnect.h  p3kcrypto.c  p3kcrypto.h  p3knet.c  p3knet.h  p3kpri_session.c  p3kprimary.c  p3kprimary.h  p3kprimaryplus.c  p3kprimaryplus.h  p3ksec_session.c  p3ksecondary.c  p3ksecondary.h  p3ksession.c  p3ksession.h  p3kshare.h  p3linux.c  p3linux.h
src/P3/ksrc/moc_src/: aes.c  aes.h  aes_ccm.c  aes_ccm.h  aes_cmac.c  aes_cmac.h  aes_ctr.c  aes_ctr.h  aes_eax.c  aes_eax.h  aes_ecb.c  aes_ecb.h  aes_keywrap.c  aes_keywrap.h  aes_xcbc_mac_96.c  aes_xcbc_mac_96.h  aesalgo.c  aesalgo.h  debug_console.h  hw_accel.h  mdefs.h  merrors.c  merrors.h  mocana.h  moptions.h  mrtos.h  mstdlib.h  mtypes.h  random.h
src/P3/ksrc/primary/: Makefile
src/P3/ksrc/primaryplus/: Makefile
src/P3/ksrc/secondary/: Makefile
src/P3/po/: Makefile  Makefile.in
src/P3/src/: Makefile.am  Makefile.am.arm  Makefile.in  p3admin.c  p3admin.h  p3base.h  p3crypto.c  p3crypto.h  p3net.c  p3net.h  p3pri_key_server.c  p3pri_key_server.h  p3pri_net.c  p3primary.c  p3primary.h  p3primaryplus.c  p3primaryplus.h  p3secondary.c  p3share.h  p3system.c  p3system.h  p3utils.c  p3utils.h
src/P3/src/android/: Makefile.am  Makefile.in  dbg_android.sh  p3admin.c  p3admin.h  p3base.h  p3crypto.c  p3crypto.h  p3net.h  p3sec_key_handler.c  p3sec_key_handler.h  p3sec_net.c  p3secondary.c  p3secondary.h  p3share.h  p3system.c  p3system.h  p3utils.c  p3utils.h
src/P3/src/android/.deps/: p3secondary-p3sec_key_handler.Po  p3secondary-p3sec_net.Po  p3secondary-p3sec_ui.Po  p3secondary-p3secondary.Po  p3secondary-p3utils.Po
src/P3/ui_src/: Makefile.am  Makefile.in  p3admin.c  p3admin.h  p3anonymous.c  p3anonymous.h  p3base.h  p3command.c  p3command.h  p3config.c  p3config.h  p3fifo.c  p3fifo.h  p3net.c  p3net.h  p3primary.c  p3secondary.c  p3utils.c  p3utils.h
src/P3/ui_src/jni/: build.sh  p3priAPI.java  p3priWindow.java  p3primaryAPI.java  p3secAPI.java  p3secWindow.java  p3secondaryAPI.java  run.sh
src/S3/src/: Makefile.am  Makefile.in  errmessages.txt  s3admin.c  s3admin.h  s3agent.c  s3agent.h  s3agent_net.c  s3agent_net.h  s3agent_ui.c  s3agent_ui.h  s3base.h  s3encrypt_engine.c  s3encrypt_engine.h  s3key_server.c  s3key_server.h  s3net.c  s3net.h  s3session.c  s3session.h  s3template.c  s3template.h  s3ui.c  s3ui.h  s3utils.c  s3utils.h
(+20 files in other folders)
